# Spotlight

./: .gitignore  README.md  RELEASENOTE.md  RELEASENOTES.md  WORKSPACE  build.gradle  gradle.properties  publish.gradle  settings.gradle
app/: BUILD.bazel  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/takusemba/spotlightapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/takusemba/spotlightsample/: ActivitySampleActivity.kt  ChooserActivity.kt  CustomOverlayPositionActivity.kt  CustomOverlayPositionFragment.kt  FragmentSampleActivity.kt  FragmentSampleFragment.kt  FragmentSampleFragment2.kt  MainActivity.java  MainActivity.kt  MultiFragmentSampleActivity.kt  MultiFragmentSampleFragment1.kt  SpotLightUtils.kt  (+2 more)
app/src/main/res/drawable/: spot.xml
app/src/main/res/layout/: activity_activity_sample.xml  activity_chooser.xml  activity_custom_overlay_position.xml  activity_fragment_sample.xml  activity_hidden_target_sample.xml  activity_main.xml  activity_multi_fragment_sample.xml  activity_on_start_sample.xml  caption_1.xml  caption_2.xml  custom_overlay.xml  fragment_fragment_sample.xml  hidden_item.xml  layout_overlay_with_randomization.xml  layout_target.xml  layout_target2.xml  multi_fragment_sample_fragment_1.xml  multi_fragment_sample_fragment_2.xml
app/src/main/res/values/: colors.xml  dimens_base.xml  strings.xml  styles.xml
spotlight/: BUILD.bazel  build.gradle
spotlight/src/main/: AndroidManifest.xml
spotlight/src/main/res/layout/: layout_spotlight.xml
spotlight/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
(+60 files in other folders)
